@startuml
class Calculator {
+ calculate(input: String?): Int
}

class InputValidator {
+ validate(input: String?): List<String>
}

class InputConverter {
+ extractInts(splitString: List<String>): ArrayDeque<Int>
+ convertToOperations(splitString: List<String>): List<Operation>
}

enum Operator {
+ value: String
+ execute: (Int, Int) -> Int
}

Calculator --> InputValidator
Calculator --> InputConverter
Calculator --> "*" Operator
InputConverter ->"*" Operator

@enduml